Add Full Key and Dichotomous Key to primary nav (#192).

--- a/gobotany/simplekey/templates/simplekey/dich_key_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/dich_key_placeholder.html
@@ -2,7 +2,7 @@
 
 {% block title %}Dichotomous Key{% endblock %}
 
-{% block body_attributes %}id="advanced-id" class="app teaching-tools"{% endblock %}
+{% block body_attributes %}id="dich-key" class="app teaching-tools"{% endblock %}
 
 {% block js_require %}
     require(['util/sidebar'], function(sidebar) {
