--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -26,10 +26,13 @@
                         <a href="{% url simplekey %}">Simple Key</a>
                     </li>
                     <li class="plantshare"><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
-                    <li class="advanced-id">
-                        <a href="{% url advanced-id-tools %}">Advanced ID Tools</a>
+                    <li class="full-key">
+                        <a href="{% url full-key-placeholder %}">Full Key</a>
                     </li>
-                    <li class="teaching-tools"><a href="{% url teaching-tools %}">Teaching Tools</a></li>
+                    <li class="dich-key">
+                        <a href="{% url dich-key-placeholder %}">Dichotomous Key</a>
+                    </li>
+                    <li class="teaching-tools"><a href="{% url teaching-tools %}">Teaching</a></li>
                     <li class="about last"><a href="{% url simplekey-help-about %}">About</a></li>
                 </ul>
                 <div class="clearit"></div>
