Add new Full Key and Dich Key links to footer as well (#192).

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -17,7 +17,9 @@
                         <li><a {% ifnotequal request.path "/" %}href="{% url simplekey-index %}"{% endifnotequal %}>Home</a></li>
                         <li><a href="{% url simplekey %}">Simple Key</a></li>
                         <li><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
-                        <li><a href="{% url advanced-id-tools %}">Advanced ID Tools</a></li>
+                        <li><a href="{% url full-key-placeholder %}">Full Key</a></li>
+                        <li><a href="{% url dich-key-placeholder %}">Dichotomous Key</a></li>
+                        <li><a href="{% url teaching-tools %}">Teaching</a></li>
                         <li><a href="{% url simplekey-help-about %}">About</a></li>
                     </ul>
                     <h6>Legal</h6>
