Fix HTML title of the About page: no hyphen in Go Botany.

--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -1,6 +1,6 @@
 {% extends "simplekey/_help.html" %}
 
-{% block pagetitle %}About Go-Botany{% endblock %}
+{% block pagetitle %}About Go Botany{% endblock %}
 
 {% block body_attributes %}id="about" class="app about"{% endblock %}
 
