Footer links: increase line height now that they wrap to 2 lines.

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -245,7 +245,7 @@ footer a[href]:hover { text-decoration: underline; }
 
 footer ul { font-size: 9px; list-style-type: none; margin-bottom: 12px; }
 
-footer li { display: inline; }
+footer li { display: inline; line-height: 14px; }
 
 footer li:after { content: " |"; }
 
