--- a/gobotany/static/sass/_media-queries.scss
+++ b/gobotany/static/sass/_media-queries.scss
@@ -374,7 +374,8 @@
     }
     #sidebar, #getting-started #sidebar, #about #sidebar,
     #advanced-map #sidebar, #plant-id #sidebar, #glossary #sidebar,
-    #video-help-topics #sidebar, #taxon #sidebar, #search-results #sidebar {
+    #video-help-topics #sidebar, #taxon #sidebar, #search-results #sidebar,
+    #contrib #sidebar {
         border-bottom: 1px solid #c3d941;
         height: auto;
         margin-left: $smallscreen-side-margin;
