Small screens: fix left margin of a heading on the Teaching page. (#174)

--- a/gobotany/static/sass/_media-queries.scss
+++ b/gobotany/static/sass/_media-queries.scss
@@ -317,8 +317,8 @@
     }
     #main #breadcrumb p, #home .three-col h3, #home .three-col h5,
     #home .three-col p, #home .three-col a, .app h2, .app p.tip,
-    .app .list-item, .app #main p, .app #main h3, #about #main ul,
-    #taxon #main p {
+    .app .list-item, .app #main p, .app #main h3, .app #main h4,
+    #about #main ul, #taxon #main p {
         margin-left: $smallscreen-side-margin;
         margin-right: $smallscreen-side-margin;
     }
