--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1359,7 +1359,7 @@ img.char-value-larger { height: 160px !important; /* Consistent height for popup
   #home #banner #overlay img { width: 53%; }
   #home #banner a#cta { background-position: 50% 0; margin: 6px; }
   #home .three-col { background: none; float: none; height: inherit; margin: 14px 0; padding: 0; width: auto; }
-  #main #breadcrumb p, #home .three-col h3, #home .three-col h5, #home .three-col p, #home .three-col a, .app h2, .app p.tip, .app .list-item, .app #main p, .app #main h3, #about #main ul, #taxon #main p { margin-left: 8px; margin-right: 8px; }
+  #main #breadcrumb p, #home .three-col h3, #home .three-col h5, #home .three-col p, #home .three-col a, .app h2, .app p.tip, .app .list-item, .app #main p, .app #main h3, .app #main h4, #about #main ul, #taxon #main p { margin-left: 8px; margin-right: 8px; }
   #main #breadcrumb p { line-height: 160%; }
   #home .three-col a.learn-more { margin-top: 6px; }
   #home #potd { padding: 8px; }
