Teaching: rename the URL and page heading to the new shorter name.
Also, redirect the old URL to the new one. (#192)

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -19,7 +19,7 @@
                         <li><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
                         <li><a href="{% url full-key-placeholder %}">Full Key</a></li>
                         <li><a href="{% url dich-key-placeholder %}">Dichotomous Key</a></li>
-                        <li><a href="{% url teaching-tools %}">Teaching</a></li>
+                        <li><a href="{% url teaching %}">Teaching</a></li>
                         <li><a href="{% url simplekey-help-about %}">About</a></li>
                     </ul>
                     <h6>Legal</h6>
