--- a/gobotany/simplekey/templates/simplekey/teaching.html
+++ b/gobotany/simplekey/templates/simplekey/teaching.html
@@ -1,6 +1,6 @@
 {% extends "simplekey/_new_base.html" %}
 
-{% block title %}Teaching Tools{% endblock %}
+{% block title %}Teaching{% endblock %}
 
 {% block body_attributes %}id="teaching-tools" class="app teaching-tools"{% endblock %}
 
@@ -17,7 +17,7 @@
         <div class="content">
             <div class="container">
                 <div id="main">
-                    <h2>Teaching Tools</h2>
+                    <h2>Teaching</h2>
 
                     <p>Go Botany is designed for students and informal
                     learners ages 10 and older, from beginners to
@@ -26,7 +26,7 @@
 
                     <h3>Share Your Ideas</h3>
 
-                    <p>The Teaching Tools section of Go Botany is a place to
+                    <p>The Teaching section of Go Botany is a place to
                     share resources for teaching botany. We&#8217;ll post the
                     curricula, modules, field workshops you have developed
                     using Go Botany here. Send your great ideas to
