--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -71,7 +71,7 @@
                     in botany for science students and beginning and amateur
                     botanists. Professors, teachers, and environmental
                     educators can share curricula and teaching ideas.</p>
-                    <a class="learn-more" href="{% url teaching-tools %}"
+                    <a class="learn-more" href="{% url teaching %}"
                         >Learn More</a>
                 </div>
 
