--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -14,7 +14,9 @@
         {% block more_meta_link %}{% endblock %}
 
         {# CSS goes here. #}
+        {% block css %}
         <link rel="stylesheet" href="/static/css/styles.css">
+        {% endblock %}
         {# These IE styles will only load if the user views the site #}
         {# in an older IE without the required Chrome Frame plug-in. #}
         <!--[if IE 7]>
